infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Detect-counterfeiting-service
spec:
  selector:
    app: Detect-counterfeiting
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
