infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Detect-counterfeiting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: Detect-counterfeiting.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: Detect-counterfeiting-service
            port:
              number: 80
